[package]
name = "agentdid-starter"
version = "0.3.0"
edition = "2021"

[dependencies]
p256 = { version = "0.13", features = ["pkcs8"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

argon2 = "0.5"
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
sha2 = "0.10"

clap = { version = "4", features = ["derive"] }
eframe = "0.29"
egui = "0.29"

time = { version = "0.3", features = ["macros", "formatting"] }
dirs = "5"
zip = "0.6"
anyhow = "1"

# NEW: Schema fetch + validate
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
jsonschema = "0.17"
url = "2.5"
ssi = { version = "0.7", default-features = false, features = ["jwk", "secp256r1"] }

[build-dependencies]
winres = { version = "0.1", optional = true }

[features]
winres = ["dep:winres"]

